double scroll bar fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 html,
 body {
   width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   height: 100%;
 }
 
